--- a/style.css
+++ b/style.css
@@ -26,7 +26,13 @@ footer {
 section {
   grid-column: 1 / 2;
   grid-row: 1 / span 3;
-  background-color: black;
+  background-color: powderblue;
+
+  padding: 24px;
+}
+
+#score-counter li {
+  margin: 16px;
 }
 
 #text-content {
@@ -53,6 +59,18 @@ section {
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
   grid-template-rows: minmax(0, 1fr);
+}
+
+#imgSection img {
+  min-height: 100%;
+  min-width: 100%;
+
+  max-height: 100%;
+  max-width: 100%;
+
+  align-self: center;
+  justify-self: center;
+  object-fit: fill;
 }
 
 p {
