--- a/style.css
+++ b/style.css
@@ -77,11 +77,16 @@ p {
   height: 100%;
 }
 
+#chart-section {
+  height: 50vh;
+  width: 50vw;
+  margin: 0 auto;
+}
+
 canvas {
-  justify-self: center;
   max-height: 100%;
   max-width: 100%;
-  grid-column: 1 / span 3;
+  object-fit: contain;
 }
 
 /* added something different */
